crates/mgo-package-resolver/src/snapshots/mgo_package_resolver__tests__cross_package.snap
---
source: crates/mgo-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
struct 0xb0::m::T0 {
    m: struct 0xa0::m::T2 {
        x: u8,
    },
    n: struct 0xa0::n::T0 {
        t: struct 0xa0::m::T1<u16, u32> {
            a: address,
            p: u16,
            q: vector<u32>,
        },
        u: struct 0xa0::m::T2 {
            x: u8,
        },
    },
}
