crates/mgo-package-resolver/src/snapshots/mgo_package_resolver__tests__simple_type.snap
---
source: crates/mgo-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
struct 0xa0::m::T0 {
    b: bool,
    v: vector<struct 0xa0::m::T1<0xa0::m::T2, u128> {
        a: address,
        p: struct 0xa0::m::T2 {
            x: u8,
        },
        q: vector<u128>,
    }>,
}
