crates/mgo-package-resolver/src/snapshots/mgo_package_resolver__tests__upgraded_package.snap
---
source: crates/mgo-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
struct 0xa1::n::T1 {
    t: struct 0xa0::m::T1<0xa1::m::T3, u32> {
        a: address,
        p: struct 0xa1::m::T3 {
            y: u16,
        },
        q: vector<u32>,
    },
    u: struct 0xa1::m::T4 {
        z: u32,
    },
}
