crates/mgo-package-resolver/src/snapshots/mgo_package_resolver__tests__value_nesting_boundary.snap
---
source: crates/mgo-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
struct 0xa0::m::T1<u8, u8> {
    a: address,
    p: u8,
    q: vector<u8>,
}
